# quadrotor-tunnel-nav

./: CMakeLists.txt  MEMORANDUM.md  README.md  SETUP.md  TODO.md  package.xml  quadrotor_tunnel_nav.rosinstall
Media/models/: 120m_landscape_smooth_tri-2.dae
config/adhoc/: robots.yaml  simconfig.yaml
config/octomap_only/: octree.rviz
config/rbpf/: grid_slam_demo.ini  octomap_test.rviz  rbpf.rviz  rbpf_default.yaml  rosconsole.config
config/slam/: octree.rviz
include/adhoc/: AdHocClientPlugin.hh  AdHocNetPlugin.hh  CommonTypes.hh
include/octomap_only/: octomap_base.hpp
include/rbpf/: CustomOctoMap.h  mrpt_rbpf_slam.h  mrpt_rbpf_slam_wrapper.h  options.h
include/reactive/: Go_Straight.hpp  Keep_Alt.hpp  Middle_Line.hpp  Obs_Avoid.hpp  Steer.hpp  Turn.hpp  layers.hpp
include/slam/: slam_base.hpp
include/wall_follow/: Keep_Going.hpp  Right_Wall.hpp  common.hpp
launch/: control.launch  control.launch~  multi_control.launch  multi_uav_IndianTunnel.launch  multi_uav_Y-tunnel.launch  multiuav_IndianTunnel.launch  outdoor_flight_gazebo.launch  rolling_landscape_120m.launch  single_control.launch  single_uav_IndianTunnel.launch  single_uav_Y-tunnel.launch  spawn_control.launch  spawn_uav.launch  uav_IndianTunnel.launch  uav_Y-tunnel.launch
launch/adhoc/: I-tunnel-40x10.launch  adhoc_control.launch  spawn_adhoc_robot.launch  spawn_control_wall_following.launch  spawn_robot.launch  start_adhoc_I-tunnel-40x10.launch
launch/controls/manual/: sanwa_gamepad.launch
launch/controls/reactive/: multi_control.launch  single_control.launch
launch/env/: multi_uav_IndianTunnel.launch  multi_uav_Y-tunnel.launch  single_uav_IndianTunnel.launch  single_uav_IndianTunnel_pose_estimation.launch  single_uav_Y-tunnel.launch  spawn_uav.launch
launch/manual/: sanwa_gamepad.launch
launch/rbpf/: rbpf_slam.launch  start_env.launch  start_robot.launch
launch/reactive/: multi_control.launch  single_control.launch  spawn_control.launch
launch/slam/: start_slam.launch
launch/slam/octomap_only/: start_octomap.launch
models/i_tunnel_40x10/: model.config  model.sdf
models/i_tunnel_common/: i_tunnel.dae
models/indian_tunnel/: model.config  model.sdf
models/y_tunnel/: model.config  model.sdf
msg/: Com.msg
rviz_cfg/: outdoor_flight.rviz
scripts/: auto_launch.py  delayed_preparer.py  remote_gzclient.sh  slave_machine.sh
src/: adjust_direction.cpp  find_wall.cpp  go_straight.cpp  keep_altitude.cpp  key_move.cpp  layer_base.hpp  layer_base.hpp~  layers.hpp  middle_line.cpp  notes.txt  obstacle_avoidance.cpp  obstacle_avoidance.cpp~  obstacle_avoidance.hpp  obstacle_avoidance.hpp~  sub.cpp  sub.cpp~  sub.hpp  sub.hpp~  subsumption.cpp  subsumption.cpp.backup  subsumption.hpp  subsumption.hpp.backup  transf.cpp  turn.cpp  uav_control.cpp  uav_control.cpp~  uav_control.hpp  uav_control.hpp~
src/adhoc/: AdHocClientPlugin.cc  AdHocClientPlugin.hh  AdHocNetPlugin.cc
src/adhoc/protobuf/: CMakeLists.txt  datagram.proto  siminfo.proto
src/octomap_only/: octomap.cpp
src/rbpf/: CustomOctoMap.cpp  mrpt_rbpf_slam.cpp  mrpt_rbpf_slam_node.cpp  mrpt_rbpf_slam_wrapper.cpp  options.cpp
src/reactive/: Go_Straight.cpp  Keep_Alt.cpp  Middle_Line.cpp  Obs_Avoid.cpp  Steer.cpp  Turn.cpp  adjust_direction.cpp  altitude.cpp  go_straight.cpp  keep_altitude.cpp  layers.hpp  main_control.cpp  middle_line.cpp  obstacle_avoidance.cpp  steer.cpp  turn.cpp
src/reactive/mains/: altitude.cpp  go_straight.cpp  main_control.cpp  middle_line.cpp  obstacle_avoidance.cpp  steer.cpp  turn.cpp
src/reactive_layers/: go_straight.cpp  keep_altitude.cpp  layers.hpp  middle_line.cpp  steer.cpp  uav_control.cpp
src/reactive_original/: adjust_direction.cpp  find_wall.cpp  go_straight.cpp  keep_altitude.cpp  layers.hpp  turn.cpp  uav_control.cpp
src/slam/: slam.cpp
src/wall_follow/: Keep_Going.cpp  Right_Wall.cpp
src/wall_follow/mains/: keep_going.cpp  right_wall.cpp
urdf/: quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_plugins_custom.gazebo.xacro  quadrotor_ray_sensor.gazebo.xacro  quadrotor_ray_sensor.urdf.xacro  quadrotor_ray_sensors_14.gazebo.xacro  quadrotor_ray_sensors_14_adhoc.gazebo.xacro  quadrotor_simple.urdf.xacro
urdf/adhoc/: quadrotor_adhoc.gazebo.xacro
urdf/parts/: plugins.gazebo.xacro  quadrotor_base.urdf.xacro  ray_sensors_14.urdf.xacro
worlds/: IndianTunnel.world  Y-tunnel.dae  Y-tunnel.world  rolling_landscape_120m.world
worlds/adhoc/: I-tunnel-40x10.world
